/*
Copyright IBM Corp. 2016 All Rights Reserved.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

		 http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/
syntax = "proto3";

package protos;

service Grpc11Manager {
	rpc Load(LoadInfo) returns (LoadStatus) {}
}

service Grpc11 {
	rpc GetECKey(GetKeyInfo) returns (GetKeyStatus) {}
	rpc GenerateECKey(GenerateInfo) returns (GenerateStatus) {}
	rpc SignP11ECDSA(SignInfo) returns (SignStatus) {}
	rpc VerifyP11ECDSA(VerifyInfo) returns (VerifyStatus) {}
	rpc ImportECKey(ImportInfo) returns (ImportStatus) {}
}

message LoadInfo {
	string label = 1;
	string pin = 2;
}

message LoadStatus {
	string address = 1;
	string error = 2;
}

message GetKeyInfo {
	bytes ski = 1;
}

message GetKeyStatus {
	bytes pubKey = 1;
	bytes oid = 2;
	bool isPriv = 3;
	string error = 4;
}

message GenerateInfo {
	bytes oid = 1;
    bool ephemeral = 2;
}

message GenerateStatus {
	bytes ski = 1;
	bytes pubKey = 2;
	string error = 3;
}

message SignInfo {
	bytes ski = 1;
	bytes msg = 2;
}

message SignStatus {
	bytes sig = 1;
	string error = 2;
}

message VerifyInfo {
	bytes ski = 1;
	bytes msg = 2;
	bytes sig = 3;
}

message VerifyStatus {
	bool valid = 1;
	string error = 2;
}

message ImportInfo {
	bytes oid = 1;
	bytes privKey = 2;
	bytes ecPt = 3;
	bool ephemeral = 4;
	bool keyType = 5;
}

message ImportStatus {
	bytes ski = 1;
	string error = 2;
}
